--- a/unit_8/index.html
+++ b/unit_8/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>JBJ Studio</title>
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="icon" href="favicon.ico">
 		<link rel="stylesheet" type="text/css" href="css/style.css">
 		<link href="https://file.myfontastic.com/n6vo44Re5QaWo8oCKShBs7/icons.css" rel="stylesheet">
@@ -89,7 +89,7 @@
 					<h2>Equipment</h2>
 					<p>The heart of our West London recording studio is based around a vintage Amek Matchless console and a full pro-tools rig connected by short, high quality cable runs into our Lavry AD10 converters. Monitoring is provided by PMC Tb2, Yamaha NS10m and KRK 7000b. The engineers at JBJ Studio understand the importance of mic pre amps and we're proud to offer our clients a choice between four focusrite red1's, 26 x AML 1081 Neve Clone and two Drawmer 1960 tube pre's. The microphone cupboard boasts a broad supply of Neumann, AKG, Shure, SE and Audio-Technica. We combine the best of analogue with the best of digital.</p>
 				</div>
-				<div class="twocolumn"> 	
+				<div class="twocolumn" id="redbg"> 	
 					<h2>Instruments & Pedals</h2>
 					<ul>
 						<li>USA Fender Telecaster x2</li>
