--- a/unit_8/index.html
+++ b/unit_8/index.html
@@ -89,25 +89,27 @@
 					<h2>Equipment</h2>
 					<p>The heart of our West London recording studio is based around a vintage Amek Matchless console and a full pro-tools rig connected by short, high quality cable runs into our Lavry AD10 converters. Monitoring is provided by PMC Tb2, Yamaha NS10m and KRK 7000b. The engineers at JBJ Studio understand the importance of mic pre amps and we're proud to offer our clients a choice between four focusrite red1's, 26 x AML 1081 Neve Clone and two Drawmer 1960 tube pre's. The microphone cupboard boasts a broad supply of Neumann, AKG, Shure, SE and Audio-Technica. We combine the best of analogue with the best of digital.</p>
 				</div>
-				<div class="twocolumn" id="redbg"> 	
-					<h2>Instruments & Pedals</h2>
-					<ul>
-						<li>USA Fender Telecaster x2</li>
-						<li>Martin DX1</li>
-						<li>Fender Jaguar</li>
-						<li>Fender Precision Bass</li>
-						<li>Roland D64 (fully weighted midi keyboard)</li>
-						<li>Roland TD6 (electric drum kit with brain)</li>
-						<li>Kemble Upright Piano</li>
-						<li>Mapex Pro Drum Kit</li>
-						<li>Status 5 String Bass</li>
-						<li>Electro Harmonix Hog</li>
-						<li>Artec Analogue Delay</li>
-						<li>Fulltone OCD</li>
-						<li>Blackstar HT DUAL</li>
-						<li>Electro Harmonix Big Muff</li>
-						<li>Boss Expression</li>
-					</ul>
+				<div class="twocolumn">
+					<div id="redbg"> 	
+						<h2>Instruments & Pedals</h2>
+						<ul>
+							<li>USA Fender Telecaster x2</li>
+							<li>Martin DX1</li>
+							<li>Fender Jaguar</li>
+							<li>Fender Precision Bass</li>
+							<li>Roland D64 (fully weighted midi keyboard)</li>
+							<li>Roland TD6 (electric drum kit with brain)</li>
+							<li>Kemble Upright Piano</li>
+							<li>Mapex Pro Drum Kit</li>
+							<li>Status 5 String Bass</li>
+							<li>Electro Harmonix Hog</li>
+							<li>Artec Analogue Delay</li>
+							<li>Fulltone OCD</li>
+							<li>Blackstar HT DUAL</li>
+							<li>Electro Harmonix Big Muff</li>
+							<li>Boss Expression</li>
+						</ul>
+					</div>	
 				</div>
 			</div>
 			<div class="gallery">
@@ -150,13 +152,13 @@
 			<div class="wrapper">
 				<h2>Clients</h2>
 
-				<ul class="nofancybox">
-					<li><img class="nofancybox" src="images/clients/lucyrose.jpg" alt="Lucy Rose" title="Lucy Rose"> Lucy Rose</li>
-					<li><img class="nofancybox" src="images/clients/razorlight.jpg" alt="Razorlight" title="Razorlight"> Razorlight</li>
-					<li><img class="nofancybox" src="images/clients/scoutingfor.jpg" alt="Scouting For Girls" title="Scouting For Girls"> Scouting For Girls</li>
-					<li><img class="nofancybox" src="images/clients/apple.jpg" alt="Apple" title="Apple"> Apple</li>
-					<li><img class="nofancybox" src="images/clients/vodafone.jpg" alt="Vodafone" title="Vodafone"> Vodafone</li>
-					<li><img class="nofancybox" src="images/clients/nhs.jpg" alt="NHS" title="NHS"> NHS</li>
+				<ul >
+					<li><img  src="images/clients/lucyrose.jpg" alt="Lucy Rose" title="Lucy Rose"> Lucy Rose</li>
+					<li><img  src="images/clients/razorlight.jpg" alt="Razorlight" title="Razorlight"> Razorlight</li>
+					<li><img  src="images/clients/scoutingfor.jpg" alt="Scouting For Girls" title="Scouting For Girls"> Scouting For Girls</li>
+					<li><img  src="images/clients/apple.jpg" alt="Apple" title="Apple"> Apple</li>
+					<li><img  src="images/clients/vodafone.jpg" alt="Vodafone" title="Vodafone"> Vodafone</li>
+					<li><img  src="images/clients/nhs.jpg" alt="NHS" title="NHS"> NHS</li>
 			</div>
 		</section>
 		<section id="contact" class="clearfix">
