--- a/unit_8/index.html
+++ b/unit_8/index.html
@@ -6,10 +6,14 @@
 		<link rel="icon" href="favicon.ico">
 		<link rel="stylesheet" type="text/css" href="css/style.css">
 		<link href="https://file.myfontastic.com/n6vo44Re5QaWo8oCKShBs7/icons.css" rel="stylesheet">
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js"></script>
         <link rel="stylesheet" href="fancybox/jquery.fancybox.css" type="text/css" media="screen" />
         <script type="text/javascript" src="fancybox/jquery.fancybox.pack.js"></script>
         <link rel="stylesheet" type="text/css" href="fancybox/helpers/jquery.fancybox-buttons.css?v=1.0.5" />
+          <!--[if lt IE 9]>
+            <script src="bower_components/html5shiv/dist/html5shiv.js"></script>
+        <![endif]-->
 		<script type="text/javascript" src="fancybox/helpers/jquery.fancybox-buttons.js?v=1.0.5"></script>
         <script>
         	$(document).ready(function() {
@@ -49,7 +53,7 @@
 		<a href="#" class="back-to-top">Back To Top</a>
 		<header>
 			<img src="images/jbj_studio.png" alt="Black Square with White Letter JBJ Studio" title="JBJ Studio Logo">
-			<a id="nav-toggle" href="#">&#9776;</a>
+			<a href="tel:01895 238112"><i id="mobilephone" class="fa fa-phone-square"></i></a>
 			<div>
 				<a class="socicon-facebook" href="https://www.facebook.com/JBJ-Recording-Studio-134786263311230/?fref=ts" target="_blank"></a>
 				<a class="socicon-twitter" href="https://twitter.com/jbjstudio" target="_blank"></a>
@@ -63,6 +67,7 @@
 				<a class="mainnav" href="#engineers">Engineers</a>
 				<a class="mainnav" href="#contact">Contact</a>	
 			</nav>
+
 	
 		</header>
 		<div id="splash">
@@ -164,10 +169,14 @@
 		<section id="contact" class="clearfix">
 			<div class="wrapper">
 				<h2>Contact</h2>
-				<div id="canvas1" class="map">
+				<div id="canvas1" class="map twocolumn">
 					<iframe id="googlemap" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d317652.10106978146!2d-0.33718633651445745!3d51.537849969476646!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48766deaeb2ecb03%3A0x3ec57147d814334e!2sJBJ+Studio!5e0!3m2!1sen!2suk!4v1456331321942" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+					<a href="https://www.google.com/maps?ll=51.533789,-0.449796&z=9&t=m&hl=en-GB&gl=GB&mapclient=embed&cid=4523145954145350478" target="blank"><div id="directions">
+						<h3>Directions </h3><i class="fa fa-map-marker"></i>
+					</div> 
+					</a>
 				</div>
-				<div id="contactdetails">
+				<div id="contactdetails" class="twocolumn">
 					<h3>Telephone - <a href="tel:01895 238112"> 01895 238112</a></h3>
 					<h3>Mobile - <a href="tel:07776 034017">07776 034017</a></h3>
 					<h3>E-Mail - <a href="mailto:enquiry@jbjstudio.co.uk?subject=Recording Enquiry">enquiry@jbjstudio.co.uk</a></h3>
