--- a/unit_9/index.html
+++ b/unit_9/index.html
@@ -54,13 +54,13 @@
 		<a href="#" class="back-to-top">Back To Top</a>
 		<header>
 			<img src="images/jbj_studio.png" alt="Black Square with White Letter JBJ Studio" title="JBJ Studio Logo">
-			<a href="tel:01895 238112"><i id="mobilephone" class="fa fa-phone-square"></i></a>
+			<a href="tel:01895238112"><i id="mobilephone" class="fa fa-phone-square"></i></a>
 			<div>
 				<a class="socicon-facebook" href="https://www.facebook.com/JBJ-Recording-Studio-134786263311230/?fref=ts" target="_blank"></a>
 				<a class="socicon-twitter" href="https://twitter.com/jbjstudio" target="_blank"></a>
 				<a class="socicon-youtube" href="https://www.youtube.com/user/JbjRecordingStudio" target="_blank"></a>
 				<br>
-				<a href="tel:01895 238112" id="phone"> 01895 238112 </a>
+				<a href="tel:01895238112" id="phone"> 01895 238112 </a>
 			</div>	
 			<nav>
 				<a class="mainnav" href="#services">Services</a>
@@ -72,10 +72,10 @@
 	
 		</header>
 		<div class="video-container" id="splash">
-			<video width="100%" autoplay="yes" loop="yes" preload="" src="jbj.mp4"></video>
+			<video id="bgvid" autoplay loop preload src="jbj.mp4"></video>
 			<h1>JBJ Studio</h1>
 			<p class="slogan">JBJ Studio is a commercial recording studio based in Uxbridge, West London. We pride ourselves in offering industry standard results at an affordable price.</p>
-			<a href="mailto:enquiry@jbjstudio.co.uk?subject=Recording Enquiry">Book A Recording</a>
+			<a href="mailto:enquiry@jbjstudio.co.uk">Book A Recording</a>
 			<a href="#services">Read More</a>
 		</div>
 		<section id="services" class="clearfix">
@@ -85,7 +85,7 @@
 					<p>Our facility is completely soundproofed and acoustically treated by Graham Whitehead of Ethos Acoustics. We offer a full range of services including writing, pre-production, recording, mixing, mastering, sound correction and voiceover for TV/Film/Game. For the most competitive prices in West London and a professional sounding outcome <a href="mailto:enquiry@jbjstudio.co.uk?subject=Recording Enquiry">get in touch </a> today</p>
 				</div>
 				<div class="twocolumn">
-					<iframe id="jbjvideo" style="display:inline" width="448" height="252" src="https://www.youtube.com/embed/MD5rMeJ_A2g?controls=1&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
+					<iframe id="jbjvideo" style="display:inline" width="448" height="252" src="https://www.youtube.com/embed/MD5rMeJ_A2g?controls=1&amp;showinfo=0"  allowfullscreen></iframe>
 				</div>	
 			</div>	
 		</section>
@@ -156,25 +156,26 @@
 			<div class="wrapper">
 				<h2>Clients</h2>
 
-				<ul >
+				<ul>
 					<li><img  src="images/clients/lucyrose.jpg" alt="Lucy Rose" title="Lucy Rose"> Lucy Rose</li>
 					<li><img  src="images/clients/razorlight.jpg" alt="Razorlight" title="Razorlight"> Razorlight</li>
 					<li><img  src="images/clients/scoutingfor.jpg" alt="Scouting For Girls" title="Scouting For Girls"> Scouting For Girls</li>
 					<li><img  src="images/clients/apple.jpg" alt="Apple" title="Apple"> Apple</li>
 					<li><img  src="images/clients/vodafone.jpg" alt="Vodafone" title="Vodafone"> Vodafone</li>
 					<li><img  src="images/clients/nhs.jpg" alt="NHS" title="NHS"> NHS</li>
+				</ul>
 			</div>
 		</section>
 		<section id="contact" class="clearfix">
 			<div class="wrapper">
 				<h2>Contact</h2>
 				<div id="canvas1" class="map twocolumn">
-					<iframe id="googlemap" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d317652.10106978146!2d-0.33718633651445745!3d51.537849969476646!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48766deaeb2ecb03%3A0x3ec57147d814334e!2sJBJ+Studio!5e0!3m2!1sen!2suk!4v1456331321942" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+					<iframe id="googlemap" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d317652.10106978146!2d-0.33718633651445745!3d51.537849969476646!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48766deaeb2ecb03%3A0x3ec57147d814334e!2sJBJ+Studio!5e0!3m2!1sen!2suk!4v1456331321942" width="600" height="450"  style="border:0" allowfullscreen></iframe>
 				</div>
 				<div id="contactdetails" class="twocolumn">
-					<h3>Telephone - <a href="tel:01895 238112"> 01895 238112</a></h3>
-					<h3>Mobile - <a href="tel:07776 034017">07776 034017</a></h3>
-					<h3>E-Mail - <a href="mailto:enquiry@jbjstudio.co.uk?subject=Recording Enquiry">enquiry@jbjstudio.co.uk</a></h3>
+					<h3>Telephone - <a href="tel:01895238112"> 01895 238112</a></h3>
+					<h3>Mobile - <a href="tel:07776034017">07776 034017</a></h3>
+					<h3>E-Mail - <a href="mailto:enquiry@jbjstudio.co.uk">enquiry@jbjstudio.co.uk</a></h3>
 					<a class="socicon-facebook contacticon" href="https://www.facebook.com/JBJ-Recording-Studio-134786263311230/?fref=ts" target="_blank"></a>
 					<a class="socicon-twitter contacticon" href="https://twitter.com/jbjstudio" target="_blank"></a>
 					<a class="socicon-youtube contacticon" href="https://www.youtube.com/user/JbjRecordingStudio" target="_blank"></a>
