--- a/unit_9/index.html
+++ b/unit_9/index.html
@@ -17,7 +17,9 @@
 		<script type="text/javascript" src="fancybox/helpers/jquery.fancybox-buttons.js?v=1.0.5"></script>
         <script>
         	$(document).ready(function() {
-            	$('.fancybox').fancybox();
+            	$('.fancybox').fancybox({
+            		padding: 0 // remove white border
+            	});
             	});
     	</script>
     	<script>
@@ -53,12 +55,17 @@
 	<body>
 		<a href="#" class="back-to-top">Back To Top</a>
 		<header>
-			<img src="images/jbj_studio.png" alt="Black Square with White Letter JBJ Studio" title="JBJ Studio Logo">
-			<a href="tel:01895238112"><i id="mobilephone" class="fa fa-phone-square"></i></a>
+			<img src="images/jbjstudio.svg" alt="Black Square with White Letter JBJ Studio" title="JBJ Studio Logo">
 			<div>
-				<a class="socicon-facebook" href="https://www.facebook.com/JBJ-Recording-Studio-134786263311230/?fref=ts" target="_blank"></a>
-				<a class="socicon-twitter" href="https://twitter.com/jbjstudio" target="_blank"></a>
-				<a class="socicon-youtube" href="https://www.youtube.com/user/JbjRecordingStudio" target="_blank"></a>
+				<a href="https://www.facebook.com/JBJ-Recording-Studio-134786263311230/?fref=ts" target="_blank">
+					<svg class="socialsvg" xmlns:dc="http://purl.org/dc/elements/1.1/" xmlns:cc="http://creativecommons.org/ns#" xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns:svg="http://www.w3.org/2000/svg" xmlns="http://www.w3.org/2000/svg" xmlns:sodipodi="http://sodipodi.sourceforge.net/DTD/sodipodi-0.dtd" xmlns:inkscape="http://www.inkscape.org/namespaces/inkscape" id="svg3409" version="1.1" inkscape:version="0.91" width="235" height="235" viewBox="0 0 235 235" sodipodi:docname="Facebook.svg"><metadata id="metadata3415"><rdf:RDF><cc:Work rdf:about=""><dc:format>image/svg+xml</dc:format><dc:type rdf:resource="http://purl.org/dc/dcmitype/StillImage"/></cc:Work></rdf:RDF></metadata><defs id="defs3413"/><sodipodi:namedview pagecolor="#ffffff" bordercolor="#666666" borderopacity="1" objecttolerance="10" gridtolerance="10" guidetolerance="10" inkscape:pageopacity="0" inkscape:pageshadow="2" inkscape:window-width="1245" inkscape:window-height="755" id="namedview3411" showgrid="false" inkscape:zoom="2.35" inkscape:cx="64.38" inkscape:cy="117.5" inkscape:window-x="35" inkscape:window-y="1" inkscape:window-maximized="1" inkscape:current-layer="svg3409"/><path d="m91.25 174.38 0-45.62-15 0-15 0 0-17.5 0-17.5 15 0 15 0 0.04-12.19C91.34 64.35 93.18 52.21 97.03 43.62 104.94 26.01 121.89 18.88 151.3 20.81l12.45 0.82 0 15.44 0 15.44-11.29 0c-12.1 0-17.71 1.59-21.79 6.16-2.11 2.36-2.53 5.06-2.96 18.92L127.2 93.75l17.74 0 17.74 0-0.89 7.19c-0.49 3.95-1.52 11.69-2.3 17.19l-1.41 10-15.29 0.35-15.29 0.35 0 45.59 0 45.59-18.12 0-18.12 0 0-45.62z" id="path3419" inkscape:connector-curvature="0"/></svg>
+				</a>
+				<a href="https://twitter.com/jbjstudio" target="_blank">
+					<svg class="socialsvg" xmlns:dc="http://purl.org/dc/elements/1.1/" xmlns:cc="http://creativecommons.org/ns#" xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns:svg="http://www.w3.org/2000/svg" xmlns="http://www.w3.org/2000/svg" xmlns:sodipodi="http://sodipodi.sourceforge.net/DTD/sodipodi-0.dtd" xmlns:inkscape="http://www.inkscape.org/namespaces/inkscape" id="svg3387" version="1.1" inkscape:version="0.91" width="235" height="235" viewBox="0 0 235 235" sodipodi:docname="Twitter.svg"><metadata id="metadata3393"><rdf:RDF><cc:Work rdf:about=""><dc:format>image/svg+xml</dc:format><dc:type rdf:resource="http://purl.org/dc/dcmitype/StillImage"/></cc:Work></rdf:RDF></metadata><defs id="defs3391"/><sodipodi:namedview pagecolor="#ffffff" bordercolor="#666666" borderopacity="1" objecttolerance="10" gridtolerance="10" guidetolerance="10" inkscape:pageopacity="0" inkscape:pageshadow="2" inkscape:window-width="1245" inkscape:window-height="755" id="namedview3389" showgrid="false" inkscape:zoom="2.35" inkscape:cx="117.5" inkscape:cy="117.5" inkscape:window-x="35" inkscape:window-y="1" inkscape:window-maximized="1" inkscape:current-layer="svg3387"/><path d="M61.25 201.13C49.75 199.81 33.17 194.79 23.14 189.6L15.63 185.71 26.9 184.8c13.76-1.11 28.79-5.71 38.41-11.74 7.77-4.87 8.94-6.81 4.11-6.81-5.45 0-16.51-4.95-22.15-9.91-3.02-2.65-7.02-7.65-8.89-11.09l-3.41-6.26 4.7 0.63c2.59 0.35 6.67 0.12 9.07-0.51l4.37-1.14-7.02-3.22C32.55 128.55 23.56 116.96 21.7 103.31l-0.83-6.07 3.67 1.9C29.19 101.54 37.5 103.15 37.5 101.64 37.5 101.02 35.28 98.34 32.58 95.7 25.11 88.4 21.94 80.18 21.95 68.13c0.01-6.71 0.72-11.59 2.15-14.83l2.14-4.83 11.03 10.46c19.26 18.27 40.33 27.9 68.99 31.52l4.38 0.55 0.08-9.77c0.07-8.39 0.65-10.93 4.12-17.96 7.98-16.21 24.6-24.79 42.49-21.94 7.39 1.18 15.36 4.85 20.17 9.28 3.01 2.78 3.37 2.82 9.79 1.14 3.67-0.96 9.37-3.04 12.68-4.62 4.78-2.29 5.87-2.48 5.32-0.94-1.14 3.2-5.4 9.15-10.11 14.13L190.74 65l3.69-0.04c2.03-0.02 6.61-1.05 10.19-2.28l6.49-2.24-2.4 3.37c-1.32 1.85-5.7 6.42-9.73 10.16l-7.33 6.79-0.78 13.07C188.24 137.97 159.53 177.83 118.67 194.05 102.86 200.32 79.35 203.22 61.25 201.13Z" id="path3397" inkscape:connector-curvature="0"/></svg>
+				</a>
+				<a href="https://www.youtube.com/user/JbjRecordingStudio" target="_blank">
+					<svg class="socialsvg" xmlns:dc="http://purl.org/dc/elements/1.1/" xmlns:cc="http://creativecommons.org/ns#" xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns:svg="http://www.w3.org/2000/svg" xmlns="http://www.w3.org/2000/svg" xmlns:sodipodi="http://sodipodi.sourceforge.net/DTD/sodipodi-0.dtd" xmlns:inkscape="http://www.inkscape.org/namespaces/inkscape" id="svg3469" version="1.1" inkscape:version="0.91" width="235" height="235" viewBox="0 0 235 235" sodipodi:docname="YouTube.svg"><metadata id="metadata3475"><rdf:RDF><cc:Work rdf:about=""><dc:format>image/svg+xml</dc:format><dc:type rdf:resource="http://purl.org/dc/dcmitype/StillImage"/></cc:Work></rdf:RDF></metadata><defs id="defs3473"/><sodipodi:namedview pagecolor="#ffffff" bordercolor="#666666" borderopacity="1" objecttolerance="10" gridtolerance="10" guidetolerance="10" inkscape:pageopacity="0" inkscape:pageshadow="2" inkscape:window-width="1245" inkscape:window-height="755" id="namedview3471" showgrid="false" inkscape:zoom="1" inkscape:cx="-6.97" inkscape:cy="117.5" inkscape:window-x="35" inkscape:window-y="1" inkscape:window-maximized="1" inkscape:current-layer="svg3469"/><path d="m65.62 187.45c-21.26-0.95-24.95-1.53-31.87-5-6.09-3.05-8.42-5.98-11.33-14.25-3.83-10.89-5.64-43.78-3.89-70.6 1.96-30.01 5.36-38.66 17.33-44.05 14.1-6.34 149.18-6.34 163.28 0 11.97 5.38 15.38 14.04 17.33 44.05 1.75 26.78-0.06 59.64-3.9 70.73-2.86 8.28-9.03 14.64-16.22 16.7-10.98 3.15-84.19 4.5-130.73 2.42zM124.64 131.11c14.76-7.64 26.36-14.32 25.78-14.85-1.35-1.24-50.54-26.75-52.61-27.29-1.22-0.31-1.56 5.86-1.56 27.81 0 15.52 0.35 28.22 0.78 28.22 0.43 0 12.85-6.25 27.61-13.89z" id="path3479" inkscape:connector-curvature="0" /></svg>
+				</a>
 				<br>
 				<a href="tel:01895238112" id="phone"> 01895 238112 </a>
 			</div>	
@@ -75,14 +82,14 @@
 			<video id="bgvid" autoplay loop preload src="jbj.mp4"></video>
 			<h1>JBJ Studio</h1>
 			<p class="slogan">JBJ Studio is a commercial recording studio based in Uxbridge, West London. We pride ourselves in offering industry standard results at an affordable price.</p>
-			<a href="mailto:enquiry@jbjstudio.co.uk">Book A Recording</a>
+			<a href="#contact">Book A Recording</a>
 			<a href="#services">Read More</a>
 		</div>
 		<section id="services" class="clearfix">
 			<div class="wrapper">
 				<div class="twocolumn">
 					<h2>Services</h2>
-					<p>Our facility is completely soundproofed and acoustically treated by Graham Whitehead of Ethos Acoustics. We offer a full range of services including writing, pre-production, recording, mixing, mastering, sound correction and voiceover for TV/Film/Game. For the most competitive prices in West London and a professional sounding outcome <a href="mailto:enquiry@jbjstudio.co.uk?subject=Recording Enquiry">get in touch </a> today</p>
+					<p>Our facility is completely soundproofed and acoustically treated by Graham Whitehead of Ethos Acoustics. We offer a full range of services including writing, pre-production, recording, mixing, mastering, sound correction and voiceover for TV/Film/Game. For the most competitive prices in West London and a professional sounding outcome <a href="mailto:enquiry@jbjstudio.co.uk">get in touch </a> today</p>
 				</div>
 				<div class="twocolumn">
 					<iframe id="jbjvideo" style="display:inline" width="448" height="252" src="https://www.youtube.com/embed/MD5rMeJ_A2g?controls=1&amp;showinfo=0"  allowfullscreen></iframe>
@@ -169,21 +176,40 @@
 		<section id="contact" class="clearfix">
 			<div class="wrapper">
 				<h2>Contact</h2>
-				<div id="canvas1" class="map twocolumn">
-					<iframe id="googlemap" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d317652.10106978146!2d-0.33718633651445745!3d51.537849969476646!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48766deaeb2ecb03%3A0x3ec57147d814334e!2sJBJ+Studio!5e0!3m2!1sen!2suk!4v1456331321942" width="600" height="450"  style="border:0" allowfullscreen></iframe>
+				<div class="twocolumn">
+					<h3 id="enquiry">Submit Enquiry</h3>
+					<form action="action_page.php">
+  						<input name="Name" type="text" value="YOUR NAME">
+      					<input name="Telephone" type ="text" value="TELEPHONE NUMBER">
+      					<input name="Email" type="text" value="EMAIL">
+      					<textarea id="message" name="Message" type="text"></textarea>
+      					<input id="submit" type="submit" value="Submit">
+  					</form>
 				</div>
 				<div id="contactdetails" class="twocolumn">
-					<h3>Telephone - <a href="tel:01895238112"> 01895 238112</a></h3>
-					<h3>Mobile - <a href="tel:07776034017">07776 034017</a></h3>
-					<h3>E-Mail - <a href="mailto:enquiry@jbjstudio.co.uk">enquiry@jbjstudio.co.uk</a></h3>
-					<a class="socicon-facebook contacticon" href="https://www.facebook.com/JBJ-Recording-Studio-134786263311230/?fref=ts" target="_blank"></a>
-					<a class="socicon-twitter contacticon" href="https://twitter.com/jbjstudio" target="_blank"></a>
-					<a class="socicon-youtube contacticon" href="https://www.youtube.com/user/JbjRecordingStudio" target="_blank"></a>
+					<h3 id="address">Address</h3>
+					<br>
 					<a href="https://www.google.com/maps?ll=51.533789,-0.449796&z=9&t=m&hl=en-GB&gl=GB&mapclient=embed&cid=4523145954145350478" target="blank">
-						<i  id="directions" class="fa fa-map-marker contacticon"></i>
+						<h4>48 Churchill Ave,<br>Hillingdon,<br> Middlesex,<br>UB10 0EB</h4>
+					</a>	
+					<br>
+					<h4>Telephone - <a href="tel:01895238112"> 01895 238112</a></h4>
+					<h4>Mobile - <a href="tel:07776034017">07776 034017</a></h4>
+					<br>					
+					<a href="https://www.facebook.com/JBJ-Recording-Studio-134786263311230/?fref=ts" target="_blank">
+						<svg class="contacticon" xmlns:dc="http://purl.org/dc/elements/1.1/" xmlns:cc="http://creativecommons.org/ns#" xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns:svg="http://www.w3.org/2000/svg" xmlns="http://www.w3.org/2000/svg" xmlns:sodipodi="http://sodipodi.sourceforge.net/DTD/sodipodi-0.dtd" xmlns:inkscape="http://www.inkscape.org/namespaces/inkscape" id="svg3409" version="1.1" inkscape:version="0.91" width="235" height="235" viewBox="0 0 235 235" sodipodi:docname="Facebook.svg"><metadata id="metadata3415"><rdf:RDF><cc:Work rdf:about=""><dc:format>image/svg+xml</dc:format><dc:type rdf:resource="http://purl.org/dc/dcmitype/StillImage"/></cc:Work></rdf:RDF></metadata><defs id="defs3413"/><sodipodi:namedview pagecolor="#ffffff" bordercolor="#666666" borderopacity="1" objecttolerance="10" gridtolerance="10" guidetolerance="10" inkscape:pageopacity="0" inkscape:pageshadow="2" inkscape:window-width="1245" inkscape:window-height="755" id="namedview3411" showgrid="false" inkscape:zoom="2.35" inkscape:cx="64.38" inkscape:cy="117.5" inkscape:window-x="35" inkscape:window-y="1" inkscape:window-maximized="1" inkscape:current-layer="svg3409"/><path d="m91.25 174.38 0-45.62-15 0-15 0 0-17.5 0-17.5 15 0 15 0 0.04-12.19C91.34 64.35 93.18 52.21 97.03 43.62 104.94 26.01 121.89 18.88 151.3 20.81l12.45 0.82 0 15.44 0 15.44-11.29 0c-12.1 0-17.71 1.59-21.79 6.16-2.11 2.36-2.53 5.06-2.96 18.92L127.2 93.75l17.74 0 17.74 0-0.89 7.19c-0.49 3.95-1.52 11.69-2.3 17.19l-1.41 10-15.29 0.35-15.29 0.35 0 45.59 0 45.59-18.12 0-18.12 0 0-45.62z" id="path3419" inkscape:connector-curvature="0"/></svg>
+					</a>
+					<a href="https://twitter.com/jbjstudio" target="_blank">
+						<svg class="contacticon" xmlns:dc="http://purl.org/dc/elements/1.1/" xmlns:cc="http://creativecommons.org/ns#" xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns:svg="http://www.w3.org/2000/svg" xmlns="http://www.w3.org/2000/svg" xmlns:sodipodi="http://sodipodi.sourceforge.net/DTD/sodipodi-0.dtd" xmlns:inkscape="http://www.inkscape.org/namespaces/inkscape" id="svg3387" version="1.1" inkscape:version="0.91" width="235" height="235" viewBox="0 0 235 235" sodipodi:docname="Twitter.svg"><metadata id="metadata3393"><rdf:RDF><cc:Work rdf:about=""><dc:format>image/svg+xml</dc:format><dc:type rdf:resource="http://purl.org/dc/dcmitype/StillImage"/></cc:Work></rdf:RDF></metadata><defs id="defs3391"/><sodipodi:namedview pagecolor="#ffffff" bordercolor="#666666" borderopacity="1" objecttolerance="10" gridtolerance="10" guidetolerance="10" inkscape:pageopacity="0" inkscape:pageshadow="2" inkscape:window-width="1245" inkscape:window-height="755" id="namedview3389" showgrid="false" inkscape:zoom="2.35" inkscape:cx="117.5" inkscape:cy="117.5" inkscape:window-x="35" inkscape:window-y="1" inkscape:window-maximized="1" inkscape:current-layer="svg3387"/><path d="M61.25 201.13C49.75 199.81 33.17 194.79 23.14 189.6L15.63 185.71 26.9 184.8c13.76-1.11 28.79-5.71 38.41-11.74 7.77-4.87 8.94-6.81 4.11-6.81-5.45 0-16.51-4.95-22.15-9.91-3.02-2.65-7.02-7.65-8.89-11.09l-3.41-6.26 4.7 0.63c2.59 0.35 6.67 0.12 9.07-0.51l4.37-1.14-7.02-3.22C32.55 128.55 23.56 116.96 21.7 103.31l-0.83-6.07 3.67 1.9C29.19 101.54 37.5 103.15 37.5 101.64 37.5 101.02 35.28 98.34 32.58 95.7 25.11 88.4 21.94 80.18 21.95 68.13c0.01-6.71 0.72-11.59 2.15-14.83l2.14-4.83 11.03 10.46c19.26 18.27 40.33 27.9 68.99 31.52l4.38 0.55 0.08-9.77c0.07-8.39 0.65-10.93 4.12-17.96 7.98-16.21 24.6-24.79 42.49-21.94 7.39 1.18 15.36 4.85 20.17 9.28 3.01 2.78 3.37 2.82 9.79 1.14 3.67-0.96 9.37-3.04 12.68-4.62 4.78-2.29 5.87-2.48 5.32-0.94-1.14 3.2-5.4 9.15-10.11 14.13L190.74 65l3.69-0.04c2.03-0.02 6.61-1.05 10.19-2.28l6.49-2.24-2.4 3.37c-1.32 1.85-5.7 6.42-9.73 10.16l-7.33 6.79-0.78 13.07C188.24 137.97 159.53 177.83 118.67 194.05 102.86 200.32 79.35 203.22 61.25 201.13Z" id="path3397" inkscape:connector-curvature="0"/></svg>
+					</a>
+					<a href="https://www.youtube.com/user/JbjRecordingStudio" target="_blank">
+						<svg class="contacticon" xmlns:dc="http://purl.org/dc/elements/1.1/" xmlns:cc="http://creativecommons.org/ns#" xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns:svg="http://www.w3.org/2000/svg" xmlns="http://www.w3.org/2000/svg" xmlns:sodipodi="http://sodipodi.sourceforge.net/DTD/sodipodi-0.dtd" xmlns:inkscape="http://www.inkscape.org/namespaces/inkscape" id="svg3469" version="1.1" inkscape:version="0.91" width="235" height="235" viewBox="0 0 235 235" sodipodi:docname="YouTube.svg"><metadata id="metadata3475"><rdf:RDF><cc:Work rdf:about=""><dc:format>image/svg+xml</dc:format><dc:type rdf:resource="http://purl.org/dc/dcmitype/StillImage"/></cc:Work></rdf:RDF></metadata><defs id="defs3473"/><sodipodi:namedview pagecolor="#ffffff" bordercolor="#666666" borderopacity="1" objecttolerance="10" gridtolerance="10" guidetolerance="10" inkscape:pageopacity="0" inkscape:pageshadow="2" inkscape:window-width="1245" inkscape:window-height="755" id="namedview3471" showgrid="false" inkscape:zoom="1" inkscape:cx="-6.97" inkscape:cy="117.5" inkscape:window-x="35" inkscape:window-y="1" inkscape:window-maximized="1" inkscape:current-layer="svg3469"/><path d="m65.62 187.45c-21.26-0.95-24.95-1.53-31.87-5-6.09-3.05-8.42-5.98-11.33-14.25-3.83-10.89-5.64-43.78-3.89-70.6 1.96-30.01 5.36-38.66 17.33-44.05 14.1-6.34 149.18-6.34 163.28 0 11.97 5.38 15.38 14.04 17.33 44.05 1.75 26.78-0.06 59.64-3.9 70.73-2.86 8.28-9.03 14.64-16.22 16.7-10.98 3.15-84.19 4.5-130.73 2.42zM124.64 131.11c14.76-7.64 26.36-14.32 25.78-14.85-1.35-1.24-50.54-26.75-52.61-27.29-1.22-0.31-1.56 5.86-1.56 27.81 0 15.52 0.35 28.22 0.78 28.22 0.43 0 12.85-6.25 27.61-13.89z" id="path3479" inkscape:connector-curvature="0" /></svg>
 					</a>
 				</div>
 			</div>
+			<div id="canvas1" class="map">
+				<iframe id="googlemap" src="https://www.google.com/maps/embed/v1/place?q=JBJ+Studio,+Uxbridge,+United+Kingdom&key=AIzaSyAN0om9mFmy1QN6Wf54tXAowK4eT0ZUPrU" width="600" height="450"  style="border:0" allowfullscreen></iframe>
+			</div>	
 		</section>
 		<footer>
 			<hr>
