--- a/unit_9/index.html
+++ b/unit_9/index.html
@@ -182,7 +182,7 @@
   						<input name="Name" type="text" value="YOUR NAME">
       					<input name="Telephone" type ="text" value="TELEPHONE NUMBER">
       					<input name="Email" type="text" value="EMAIL">
-      					<textarea id="message" name="Message" type="text"></textarea>
+      					<textarea id="message" name="Message"></textarea>
       					<input id="submit" type="submit" value="Submit">
   					</form>
 				</div>
@@ -193,7 +193,7 @@
 						<h4>48 Churchill Ave,<br>Hillingdon,<br> Middlesex,<br>UB10 0EB</h4>
 					</a>	
 					<br>
-					<h4>Telephone - <a href="tel:01895238112"> 01895 238112</a></h4>
+					<h4 id="contacttel">Telephone - <a href="tel:01895238112"> 01895 238112</a></h4>
 					<h4>Mobile - <a href="tel:07776034017">07776 034017</a></h4>
 					<br>					
 					<a href="https://www.facebook.com/JBJ-Recording-Studio-134786263311230/?fref=ts" target="_blank">
