--- a/unit_9/index.html
+++ b/unit_9/index.html
@@ -98,7 +98,7 @@
 			<div class="wrapper">
 				<div class="twocolumn">
 					<h2>Services</h2>
-					<p>Our facility is completely soundproofed and acoustically treated by Graham Whitehead of Ethos Acoustics. We offer a full range of services including writing, pre-production, recording, mixing, mastering, sound correction and voiceover for TV/Film/Game. For the most competitive prices in West London and a professional sounding outcome <a href="mailto:enquiry@jbjstudio.co.uk">get in touch </a> today</p>
+					<p>Our facility is completely soundproofed and acoustically treated by Graham Whitehead of Ethos Acoustics. We offer a full range of services including writing, pre-production, recording, mixing, mastering, sound correction and voiceover for TV/Film/Game. For the most competitive prices in West London and a professional sounding outcome <a href="#contact">get in touch </a> today</p>
 				</div>
 				<div class="twocolumn">
 					<iframe id="jbjvideo" style="display:inline" width="448" height="252" src="https://www.youtube.com/embed/MD5rMeJ_A2g?controls=1&amp;showinfo=0"  allowfullscreen></iframe>
