--- a/girlsandboys/index.html
+++ b/girlsandboys/index.html
@@ -15,7 +15,7 @@
 		</nav>
 	</header>
 	<div class="video-containter" id="splash">
-		<img id="stillbg" src="images/stillbg.jpg">
+		<img id="stillbg" src="images/stillbg.JPG">
 
 	</div>
 	<footer>
