mail signup update

--- a/girlsandboys/index.html
+++ b/girlsandboys/index.html
@@ -2,8 +2,9 @@
 <html>
 <head>
 	<title>Girls & Boys</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
-	<link rel="stylesheet" type="text/css" href="css/reset.css">	
+	<link rel="stylesheet" type="text/css" href="css/reset.css">
 </head>
 <body>
 	<header>
@@ -19,7 +20,7 @@
 
 	</div>
 	<footer>
-		<div id="player">
+<!-- 		<div id="player">
 			<script>
 			   (function() {
 			      var script = document.createElement('script');
@@ -45,7 +46,7 @@
 			      });
 			   });
 			</script>
-		</div>
+		</div> -->
 		<div class="threecolumn">
 			<h2>Signup</h2>
 		</div>
@@ -72,10 +73,12 @@
 			</a>
 		</div>
 		<div class="threecolumn">
+			<a class="crossrotate" href="#">
 			<h2>Playlist</h2>
-			<svg id="playlistplus" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+			<svg class="plus" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
   			<path d="M24 20.188l-8.315-8.21 8.2-8.28L20.188 0l-8.212 8.318L3.666.115 0 3.78l8.32 8.24-8.205 8.314L3.78 24l8.238-8.318 8.285 8.203z"/>
 			</svg>
+			</a>
 		</div>
 	</footer>
 </body>
