--- a/girlsandboys/index.html
+++ b/girlsandboys/index.html
@@ -20,7 +20,53 @@
 
 	</div>
 	<footer>
-<!-- 		<div id="player">
+		<div class="threecolumn">
+			<div class="horizontal" id="mc_embed_signup">
+				<form action="http://isavedlatin.us5.list-manage.com/subscribe/post?u=267b05ed8a2d7293af40a7a59&amp;id=18d96d2ed4" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+    				<div class="horizontal" id="mc_embed_signup_scroll">
+						<input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="Email Address" required>
+    					<!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+    					<div class="horizontal" style="position: absolute; left: -5000px;" aria-hidden="true">
+    						<input type="text" name="b_267b05ed8a2d7293af40a7a59_18d96d2ed4" tabindex="-1" value="">
+    					</div>
+    					<div class="horizontal underslide">
+    						<input id="submit" type="submit" value="Sign Up" name="subscribe" id="mc-embedded-subscribe" class="button underslide">
+    					</div>
+    				</div>
+				</form>
+			</div>
+		</div>
+		<div class="center threecolumn">	
+			<a class="underslide" href="https://www.facebook.com/girlsandboysbooking/" target="blank">
+				<svg class="socialsvg" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+  				<path d="M9 8H6v4h3v12h5V12h3.642L18 8h-4V6.333C14 5.378 14.192 5 15.115 5H18V0h-3.808C10.596 0 9 1.583 9 4.615V8z"/>
+				</svg>
+			</a>	
+			<a class="underslide" href="https://twitter.com/GB_Booking" target="blank">
+				<svg class="socialsvg" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+  				<path d="M24 4.557c-.883.392-1.832.656-2.828.775 1.017-.61 1.798-1.574 2.165-2.724-.95.564-2.005.974-3.127 1.195-.897-.957-2.178-1.555-3.594-1.555-3.18 0-5.515 2.966-4.797 6.045C7.727 8.088 4.1 6.128 1.67 3.15.38 5.36 1.003 8.256 3.195 9.722c-.806-.026-1.566-.247-2.23-.616-.053 2.28 1.582 4.415 3.95 4.89-.693.188-1.452.232-2.224.084.626 1.957 2.444 3.38 4.6 3.42-2.07 1.623-4.678 2.348-7.29 2.04 2.18 1.397 4.768 2.212 7.548 2.212 9.142 0 14.307-7.72 13.995-14.646.962-.695 1.797-1.562 2.457-2.55z"/>
+				</svg>
+			</a>	
+			<a class="underslide" href="https://soundcloud.com/girlsandboys-1" target="blank">
+				<svg class="socialsvg" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+  				<path d="M7 17.94H6V9.87c.308-.23.64-.428 1-.565v8.634zm3 0h1V8.714c-.23.265-.443.548-.62.857L10 9.388v8.55zm-2 0h1V9.09c-.508-.078-.623-.05-1-.01v8.86zm-4 0h1v-7.02c-.312.457-.555.97-.692 1.534L4 12.272v5.667zm-3-5.25c-.606.546-1 1.353-1 2.267 0 .914.394 1.72 1 2.268V12.69zm18.88-.672c-.205-2.837-2.405-5.08-5.118-5.08-1.022 0-1.964.33-2.762.878V17.94h9.09c1.606 0 2.91-1.394 2.91-3.107 0-2.233-2.168-3.772-4.12-2.815zM3 11.99c-.302-.023-.526-.03-1 .123v5.69c.446.142.636.137 1 .137v-5.95z"/>
+				</svg>
+			</a>
+			<a class="underslide" href="https://www.instagram.com/joshuajordanward/" target="blank">
+				<svg class="socialsvg" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+  				<path d="M11.984 16.815c2.596 0 4.706-2.11 4.706-4.707 0-1.41-.623-2.674-1.606-3.538-.346-.303-.735-.556-1.158-.748-.593-.27-1.25-.42-1.94-.42s-1.35.15-1.942.42c-.424.194-.814.447-1.158.75-.985.863-1.608 2.128-1.608 3.537 0 2.594 2.112 4.705 4.706 4.705zM12 8.63c1.92 0 3.48 1.558 3.48 3.48 0 1.92-1.56 3.478-3.48 3.478s-3.48-1.557-3.48-3.48c0-1.92 1.56-3.477 3.48-3.477zm5.223.37H24v10.278C24 21.886 21.886 24 19.278 24H4.785C2.177 24 0 21.886 0 19.278V9h6.747c-.544.913-.872 1.97-.872 3.11 0 3.373 2.735 6.108 6.11 6.108s6.108-2.735 6.108-6.11c0-1.14-.327-2.195-.87-3.108zm2.055-9H7v5H6V0H5v5H4V.077c-.346.057-.682.143-1 .27V5H2V.898c-1.202.857-2 2.246-2 3.824V8h7.473c1.167-1.282 2.798-2 4.51-2 1.723 0 3.352.725 4.512 2H24V4.722C24 2.114 21.886 0 19.278 0zM22 5.265c0 .406-.333.735-.745.735h-2.51C18.332 6 18 5.67 18 5.265v-2.53c0-.406.333-.735.744-.735h2.51c.413 0 .746.33.746.735v2.53z"/>
+				</svg>
+			</a>
+		</div>
+		<div class="threecolumn">
+			<a class="crossrotate underslide" href="#">
+			<h2>Playlist</h2>
+			<svg class="plus" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+  			<path d="M24 20.188l-8.315-8.21 8.2-8.28L20.188 0l-8.212 8.318L3.666.115 0 3.78l8.32 8.24-8.205 8.314L3.78 24l8.238-8.318 8.285 8.203z"/>
+			</svg>
+			</a>
+		</div>
+		<div id="player">
 			<script>
 			   (function() {
 			      var script = document.createElement('script');
@@ -46,39 +92,6 @@
 			      });
 			   });
 			</script>
-		</div> -->
-		<div class="threecolumn">
-			<h2>Signup</h2>
-		</div>
-		<div class="center threecolumn">	
-			<a class="underslide" href="https://www.facebook.com/girlsandboysbooking/" target="blank">
-				<svg class="socialsvg" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
-  				<path d="M9 8H6v4h3v12h5V12h3.642L18 8h-4V6.333C14 5.378 14.192 5 15.115 5H18V0h-3.808C10.596 0 9 1.583 9 4.615V8z"/>
-				</svg>
-			</a>	
-			<a class="underslide" href="https://twitter.com/GB_Booking" target="blank">
-				<svg class="socialsvg" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
-  				<path d="M24 4.557c-.883.392-1.832.656-2.828.775 1.017-.61 1.798-1.574 2.165-2.724-.95.564-2.005.974-3.127 1.195-.897-.957-2.178-1.555-3.594-1.555-3.18 0-5.515 2.966-4.797 6.045C7.727 8.088 4.1 6.128 1.67 3.15.38 5.36 1.003 8.256 3.195 9.722c-.806-.026-1.566-.247-2.23-.616-.053 2.28 1.582 4.415 3.95 4.89-.693.188-1.452.232-2.224.084.626 1.957 2.444 3.38 4.6 3.42-2.07 1.623-4.678 2.348-7.29 2.04 2.18 1.397 4.768 2.212 7.548 2.212 9.142 0 14.307-7.72 13.995-14.646.962-.695 1.797-1.562 2.457-2.55z"/>
-				</svg>
-			</a>	
-			<a class="underslide" href="https://soundcloud.com/girlsandboys-1" target="blank">
-				<svg class="socialsvg" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
-  				<path d="M7 17.94H6V9.87c.308-.23.64-.428 1-.565v8.634zm3 0h1V8.714c-.23.265-.443.548-.62.857L10 9.388v8.55zm-2 0h1V9.09c-.508-.078-.623-.05-1-.01v8.86zm-4 0h1v-7.02c-.312.457-.555.97-.692 1.534L4 12.272v5.667zm-3-5.25c-.606.546-1 1.353-1 2.267 0 .914.394 1.72 1 2.268V12.69zm18.88-.672c-.205-2.837-2.405-5.08-5.118-5.08-1.022 0-1.964.33-2.762.878V17.94h9.09c1.606 0 2.91-1.394 2.91-3.107 0-2.233-2.168-3.772-4.12-2.815zM3 11.99c-.302-.023-.526-.03-1 .123v5.69c.446.142.636.137 1 .137v-5.95z"/>
-				</svg>
-			</a>
-			<a class="underslide" href="https://www.instagram.com/joshuajordanward/" target="blank">
-				<svg class="socialsvg" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
-  				<path d="M11.984 16.815c2.596 0 4.706-2.11 4.706-4.707 0-1.41-.623-2.674-1.606-3.538-.346-.303-.735-.556-1.158-.748-.593-.27-1.25-.42-1.94-.42s-1.35.15-1.942.42c-.424.194-.814.447-1.158.75-.985.863-1.608 2.128-1.608 3.537 0 2.594 2.112 4.705 4.706 4.705zM12 8.63c1.92 0 3.48 1.558 3.48 3.48 0 1.92-1.56 3.478-3.48 3.478s-3.48-1.557-3.48-3.48c0-1.92 1.56-3.477 3.48-3.477zm5.223.37H24v10.278C24 21.886 21.886 24 19.278 24H4.785C2.177 24 0 21.886 0 19.278V9h6.747c-.544.913-.872 1.97-.872 3.11 0 3.373 2.735 6.108 6.11 6.108s6.108-2.735 6.108-6.11c0-1.14-.327-2.195-.87-3.108zm2.055-9H7v5H6V0H5v5H4V.077c-.346.057-.682.143-1 .27V5H2V.898c-1.202.857-2 2.246-2 3.824V8h7.473c1.167-1.282 2.798-2 4.51-2 1.723 0 3.352.725 4.512 2H24V4.722C24 2.114 21.886 0 19.278 0zM22 5.265c0 .406-.333.735-.745.735h-2.51C18.332 6 18 5.67 18 5.265v-2.53c0-.406.333-.735.744-.735h2.51c.413 0 .746.33.746.735v2.53z"/>
-				</svg>
-			</a>
-		</div>
-		<div class="threecolumn">
-			<a class="crossrotate" href="#">
-			<h2>Playlist</h2>
-			<svg class="plus" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
-  			<path d="M24 20.188l-8.315-8.21 8.2-8.28L20.188 0l-8.212 8.318L3.666.115 0 3.78l8.32 8.24-8.205 8.314L3.78 24l8.238-8.318 8.285 8.203z"/>
-			</svg>
-			</a>
 		</div>
 	</footer>
 </body>
