--- a/girlsandboys/index.html
+++ b/girlsandboys/index.html
@@ -16,7 +16,7 @@
 		</nav>
 	</header>
 	<div class="video-containter clearfix" id="splash">
-		<img id="stillbg" src="images/stillbg.jpg">
+		<img id="stillbg" src="images/stillbg2.jpg">
 	</div>
 
 
