--- a/unit_9/index.html
+++ b/unit_9/index.html
@@ -133,19 +133,13 @@
 				</div>
 			</div>
 			<div class="gallery">
-					<a class="fancybox" href="images/equipment/nuemann1.jpg" data-fancybox-group="gallery" title="Nuemann Microphones"><img src="images/thumbs/nuemann1.jpg" alt="Nuemann Microphone"></a>
+					<a class="fancybox" href="images/equipment/room.jpg" data-fancybox-group="gallery" title="JBJ Studio Control Room"><img src="images/thumbs/room.jpg" alt="JBJ Studio Control Room"></a>
 					<a class="fancybox" href="images/equipment/nuemann2.jpg" data-fancybox-group="gallery" title="Nuemann Microphones"><img src="images/thumbs/nuemann2.jpg" alt="Nuemann Microphone"></a>
 					<a class="fancybox" href="images/equipment/microphones1.jpg" data-fancybox-group="gallery" title="A Range of Microphones"><img src="images/thumbs/microphones1.jpg" alt="JBJ Microphones"></a>
-					<a class="fancybox" href="images/equipment/microphones2.jpg" data-fancybox-group="gallery" title="A Range of Microphones"><img src="images/thumbs/microphones2.jpg" alt="JBJ Microphones"></a>
 					<a class="fancybox" href="images/equipment/neve.jpg" data-fancybox-group="gallery" title="Neve EQ's"><img src="images/thumbs/neve.jpg" alt="Neve EQ's"></a>
 					<a class="fancybox" href="images/equipment/desk1.jpg" data-fancybox-group="gallery" title="Amek Matchless Console"><img src="images/thumbs/desk1.jpg" alt="Amek Matchless Console"></a>
-					<a class="fancybox" href="images/equipment/rack1.jpg" data-fancybox-group="gallery" title="Focusrite Pre's & Dramer Compressor"><img src="images/thumbs/rack1.jpg" alt="JBJ Rack"></a>
-					<a class="fancybox" href="images/equipment/rack2.jpg" data-fancybox-group="gallery" title="Focusrite Red Pre"><img src="images/thumbs/rack2.jpg" alt="JBJ Rack"></a>
-					<a class="fancybox" href="images/equipment/focusrite.jpg" data-fancybox-group="gallery" title="Focusrite Red Pre"><img src="images/thumbs/focusrite.jpg" alt="Focusrite Red Pre Amp"></a>
-					<a class="fancybox" href="images/equipment/lavry.jpg" data-fancybox-group="gallery" title="Lavry AD10 Converter"><img src="images/thumbs/lavry.jpg" alt="Lavry AD10 Converter"></a>
+						<a class="fancybox" href="images/equipment/rack1.jpg" data-fancybox-group="gallery" title="Focusrite Pre's & Dramer Compressor"><img src="images/thumbs/rack1.jpg" alt="JBJ Rack"></a>
 					<a class="fancybox" href="images/equipment/amps1.jpg" data-fancybox-group="gallery" title="Guitar Amplifiers"><img src="images/thumbs/amps1.jpg" alt="JBJ Guitar Amps"></a>
-					<a class="fancybox" href="images/equipment/orange.jpg" data-fancybox-group="gallery" title="Orange Amps"><img src="images/thumbs/orange.jpg" alt="Orange Amps"></a>
-					<a class="fancybox" href="images/equipment/vox.jpg" data-fancybox-group="gallery" title="Vox Amps"><img src="images/thumbs/vox.jpg" alt="Vox Amps"></a>
 					<a class="fancybox" href="images/equipment/piano1.jpg" data-fancybox-group="gallery" title="Upright Piano"><img src="images/thumbs/piano1.jpg" alt="JBJ Piano"></a>
 					<a class="fancybox" href="images/equipment/piano2.jpg" data-fancybox-group="gallery" title="Upright Piano"><img src="images/thumbs/piano2.jpg" alt="JBJ Piano"></a>
 				</div>	
@@ -224,7 +218,7 @@
 		</section>
 		<footer>
 			<hr>
-			<p>&copy; JBJ Studio 2016 -- Website Design by <a href="mailto:alex@alexcrowley.co.uk?subject=Hello">Alex Crowley</a></p>
+			<p>&copy; JBJ Studio 2016 -- Website Design by <a href="http://www.alexcrowley.co.uk" target="_blank">Alex Crowley</a></p>
 		</footer>
 	</body>
 </html>
