--- a/girlsandboys/index.html
+++ b/girlsandboys/index.html
@@ -30,9 +30,9 @@
 		<div class="threecolumn">
 			<form action="http://tumblr.us12.list-manage.com/subscribe/post?u=9bbe8238d6e730db1cac503c9&amp;id=30977663e0" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
 	    		<input type="email" value="" name="EMAIL" class="email underslide" id="mce-EMAIL" placeholder="Email Address" required>
-	    		<div style="position: absolute; left: -5000px;" aria-hidden="true">
-	    		<input type="text" name="b_267b05ed8a2d7293af40a7a59_18d96d2ed4" tabindex="-1" value="">
-	    		</div>
+	    		<!-- <div style="position: absolute; left: -5000px;" aria-hidden="true"> -->
+	    		<!-- <input type="text" name="b_267b05ed8a2d7293af40a7a59_18d96d2ed4" tabindex="-1" value="">
+	    		</div> -->
 	    		<div class="underslide">
 	    			<input id="submit" type="submit" value="Sign Up" name="subscribe" id="mc-embedded-subscribe" class="button">
 	    		</div>	
