--- a/mirrorslanding/index.html
+++ b/mirrorslanding/index.html
@@ -9,7 +9,7 @@
 <body>
 	<div class="page-wrap">
 		<div id="logo">
-			<img src="images/mirrors.png">
+			<img src="images/mirrors3.png">
 	<!-- 		<div id="logobg"></div> -->
 		</div>
    		<h1>29/10/16</h1>
@@ -21,7 +21,7 @@
 
 	<footer class="site-footer">
   		<div class="threecolumn">
-			<img src="images/sponsors.png">
+			<img src="images/sponsors2.png">
 		</div>
 		<div class="social threecolumn">
 			<a href="https://www.facebook.com/mirrorslondon?fref=ts&ref=br_tf" target="blank">
@@ -35,7 +35,7 @@
 			</a>
 		</div>
 		<div class="threecolumn">
-			<img src="images/venues.png">
+			<img src="images/venues2.png">
 		</div>
 	</footer>
 </body>
