--- a/mirrorslondon2016/index2.html
+++ b/mirrorslondon2016/index2.html
@@ -3,14 +3,14 @@
 <head>
 	<title>M I R R O R S  - - 2 0 1 6</title>
 	<link rel="stylesheet" type="text/css" href="css/reset.css">
-	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="stylesheet" type="text/css" href="css/style2.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
 </head>
 <body>
 	<div class="page-wrap">
 		<div id="logo">
-			<img src="images/mirrors3.png">
+			<img src="images/mirrors4.png">
 	<!-- 		<div id="logobg"></div> -->
 		</div>
    		<h1>29/10/16</h1>
