--- a/mirrorslondon2016/index.html
+++ b/mirrorslondon2016/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 	<title>M I R R O R S  - - 2 0 1 6</title>
 	<link rel="stylesheet" type="text/css" href="css/reset.css">
@@ -141,7 +141,7 @@
 			<div id="logobg"></div>
 		</div> --> 
 		<div class="poster">
-			<img id="poster" src="images/poster.png">
+			<img id="poster" src="images/poster.png" alt="Mirrors 2016 Festival Line Up Poster">
 		</div>	
    		<h1>29/10/16</h1>
 		<br>
@@ -153,7 +153,7 @@
 
 	<footer class="site-footer">
   		<div class="threecolumn">
-			<img src="images/sponsors2.png">
+			<img src="images/sponsors2.png" alt="Mirrors 2016 Festival Sponsors">
 		</div>
 		<div class="social threecolumn">
 			<a href="https://www.facebook.com/mirrorslondon?fref=ts&ref=br_tf" target="blank">
