full sit update

--- a/mirrors2016full/lineup.html
+++ b/mirrors2016full/lineup.html
@@ -136,46 +136,19 @@
 
 	</header>
 	<div class="page-wrap">
-		<div class="about">
-			<h2>+++</h2>
-			<p>
-			After the success of their 2015 debut, <span>MIRRORS</span> announce the first acts for their 2016 edition, with <span>Bat For Lashes</span> set to headline the multi-venue live music event, taking place across four stunning Hackney locations on <span>Saturday 29th</span> October 2016.
-			</p>
-			<p>
-			Dedicated to supporting the finest in forward-thinking music, putting the focus on audience experience, <span>MIRRORS 2016</span> will make a welcome return to striking East London church venues <span>St John's At Hackney</span> and <span>Round Chapel</span>, making the most of the spiritual surroundings and ethereal acoustic qualities. Popular Hackney destination <span>Oslo</span> will once again host a stage and, in a move to raise the bar for 2016, a new fourth stage will be hosted at <span>Moth Club</span>.
-			</p>
-			<p>
-			<span>Bat For Lashes</span> is an artist in the truest sense. Through high-concept productions, she explores the human condition, fully immersing herself in themes and constructing complex narratives to each work. Her fourth studio album sees Bat For Lashes embody a young bride, weaving a story of hope, lost love, self-discovery and rebirth, as a modern woman who battles with the emotional ambiguity
-			of social convention and female empowerment.
-			</p>
-			<p>
-			Following last Friday's release of new album <a href="https://play.google.com/store/music/album/Bat_For_Lashes_The_Bride?id=Bph222bs32wzd4ihlkiiuva7vqe&hl=en_GB" target="blank">'The Bride'</a>, Bat For Lashes' headline performance at MIRRORS 2016 makes for a timely and fitting announcement, offering the Mercury Prize nominated song-writer the perfect setting to perform her latest works.
-			</p>
-			<p>
-			Bringing the shimmering sun-tinged sounds of California to London, Psychedelic garage-rock quartet <span>Allah-Las</span> are also amongst the first to be announced, with their anticipated new album 'Calico Review' scheduled for release on 9th September, in good time for their set at MIRRORS 2016.
-			</p>
-			<p>
-			Marking ten years since it's release, Canadian punk provocateurs <span>F*cked Up</span> will perform their lauded debut album 'Hidden World', live and in full. First released in 2006, 'Hidden World' received global commendation, propelling the band to unprecedented success.
-			</p>
-			<p>
-			The addition of <span>Bill Ryder-Jones</span> to the programme will be greatly anticipated after the Coral Co- Founder's 2015 album 'West Kirby County Primary' received critical acclaim across the board, with Clash Magazine describing it as a 'transcendent return'.
-			</p>
-			<p>
-			MIRRORS are thrilled to have secured American garage-punk band <span>Diarrhea Planet</span> for their first ever UK show. Renowned globally for raucous performances that have won them acclaim as one of the best live bands around today, their debut set for MIRRORS looks certain to be a firm favourite amongst those lucky enough to behold it.
-			</p>
-			<p>
-			Also making the trip across the Atlantic, <span>Cherry Glazerr</span> bring their off-kilter sound and explosive stage presence to the show. Following the release of their debut LP 'Haxel Princess' on Burger Records earlier this year, the LA based garage rock trio recently announced their first European tour, culminating with their set for MIRRORS.
-			</p>
-			<p>
-			Shining a light on new music, the carefully curated lineup will also showcase some of the most exciting emerging talents with the dreamy and nostalgic sounds of London-based five-piece <span>Swimming Tapes</span>, soulful vocals from singer-songwriter <liv>Liv Dawson</liv>, the tender, emotive tracks from <span>Babeheaven</span> and romantic, Leeds-based outfit <span>Caro</span> all set to perform at this year's show.
-			</p>
-			<p>
-			First release tickets go on sale for at 9am on Friday 8th July across official ticketing platforms.
-			</p>
-			<p>
-			Speaking ahead of this announcement, MIRRORS founder Scott O'Neill said: "We are very excited about this year's lineup. Building on the sellout success of our inaugural year we are honoured to have one of our longtime favourite artists Bat For Lashes as our headliners. Whilst I would personally tip every single band on the lineup, if anyone fancies losing themselves to one of the most high energy punk rock bands on the planet - then check out Diarrhea Planet, they blew me away when I saw them at The Independent in San Francisco earlier this year, and this will be their first ever London show." - <span>Scott O'Neill (Festival Promoter)</span>
-			</p>
-
+		<div class="lineup">
+			<h1>LINEUP</h1>
+			<h3>BAT FOR LASHES</h3> 
+			<h3>ALLAH-LAS</h3>
+			<h3>F*CKED UP PERFORM HIDDEN WORLD</h3>
+			<h3>BILL RYDER-JONES</h3>
+			<h3>CHERRY GLAZERR</h3>
+			<h3>DIARRHEA PLANET</h3>
+			<h3>BABEHEAVEN</h3>
+			<h3>SWIMMING TAPES</h3>
+			<h3>LIV DAWSON</h3>
+			<h3>CARO</h3>
+			<h3 id="manymore">**MANY MORE ACTS STILL TO BE ANNOUNCED FOR MIRRORS 2016**</h3>
 		</div>
 	</div>
 
