--- a/mirrors2016full/lineup.html
+++ b/mirrors2016full/lineup.html
@@ -146,6 +146,7 @@
 			<h3>DIARRHEA PLANET</h3>
 			<h3>BABEHEAVEN</h3>
 			<h3>SWIMMING TAPES</h3>
+			<h3>STARLING</h3>
 			<h3>LIV DAWSON</h3>
 			<h3>CARO</h3>
 			<h3 id="manymore">**MANY MORE ACTS STILL TO BE ANNOUNCED FOR MIRRORS 2016**</h3>
