--- a/mirrors2016full-2016-09-26/about.html
+++ b/mirrors2016full-2016-09-26/about.html
@@ -146,7 +146,8 @@
 			We are dedicated to supporting the finest in forward-thinking music, putting the focus on audience experience. <a href="https://www.facebook.com/mirrorslondon/?fref=ts&ref=br_tf" target="blank"><span>MIRRORS 2016</span></a> will make a welcome return to striking East London church venue <a href="https://www.facebook.com/St-John-at-Hackney-Church-128667697243017/?fref=ts" target="blank"><span>St John's At Hackney</span></a>, making the most of the spiritual surroundings and ethereal acoustic qualities. Popular Hackney destination <a href="https://www.facebook.com/OsloHackney/?fref=ts" target="blank"><span>Oslo</span></a> will once again host a stage and, in a move to raise the bar for 2016, we have included <a href="https://www.facebook.com/mothclub/?fref=ts" target="blank"><span>Moth Club</span></a>, <a href="https://www.facebook.com/HackneyPicturehouse/?fref=ts&ref=br_tf" target="blank"><span>Hackney Picturehouse</span></a>, <a href="https://www.facebook.com/stage3hackney/?fref=ts" target="blank"><span>Stage 3</span></a> (at Hackney Empire) and <a href="https://www.facebook.com/paperdressvintage/?ref=br_rs" target="blank"><span>Paper Dress Vintage</span></a>. 
 			</p>
 			<p>
-			Press Contact: <a href="mailto:freya@therestisnoise.co.uk?Subject=Mirrors%20Festival%202016">freya@therestisnoise.co.uk </a>
+			Press Contact: <br>
+			<a href="mailto:freya@therestisnoise.co.uk?Subject=Mirrors%20Festival%202016">freya@therestisnoise.co.uk </a>
 			</p>
 
 		</div>
