--- a/girlsandboys/about.html
+++ b/girlsandboys/about.html
@@ -33,14 +33,14 @@
 	<!-- Transition Script -->
 	<script type="text/javascript">
 		$(document).ready(function() {
-		    $(".content").css("display", "none");
+		    $(".overlay").css("display", "none");
 		 
-		    $(".content").fadeIn(2000);
+		    $(".overlay").fadeIn(2000);
 		 
 		    $("a.transition").click(function(event){
 		        event.preventDefault();
 		        linkLocation = this.href;
-		        $(".content").fadeOut(1000, redirectPage);      
+		        $(".overlay").fadeOut(1000, redirectPage);      
 		    });
 		         
 		    function redirectPage() {
@@ -52,10 +52,10 @@
 <body>
 	<header>
 		<nav>
-			<a class="mainnav underslide transition" href="signup.html">Sign Up</a>
-			<a class="mainnav underslide transition" href="events.html">Events</a>
+			<a class="mainnav underslide" href="signup.html">Sign Up</a>
+			<a class="mainnav underslide" href="events.html">Events</a>
 			<a class="mainnav underslide" href="http://girlsandboyslikemusic.tumblr.com/" target="blank">Blog</a>
-			<a class="mainnav underslide transition" href="about.html">About</a>
+			<a class="mainnav underslide" href="about.html">About</a>
 			<a class="mainnav underslide" href="https://soundcloud.com/girlsandboys-1/sets/september-2016" target="blank">Playlist</a>
 		</nav>
 		<div class=mobile-nav>
@@ -63,20 +63,31 @@
 		  	<button class="cross">&#735;</button>
 			<div class="menu">
 		  		<ul>
-		  			<a class="transition" href="index.html"><li>HOME</li></a>
-		  			<a class="transition" href="signup.html"><li>SIGN UP</li></a>
-				    <a class="transition" href="events.html"><li>EVENTS</li></a>
+		  			<a href="index.html"><li>HOME</li></a>
+		  			<a href="signup.html"><li>SIGN UP</li></a>
+				    <a href="events.html"><li>EVENTS</li></a>
 				    <a href="http://girlsandboyslikemusic.tumblr.com/" target="blank"><li>BLOG</li></a>
-				    <a class="transition" href="about.html"><li>ABOUT</li></a>
+				    <a href="about.html"><li>ABOUT</li></a>
 				    <a href="https://soundcloud.com/girlsandboys-1/sets/september-2016" target="blank"><li>PLAYLIST</li></a>
 		  		</ul>
 			</div> 
 		</div>
 	</header>
-	<div class="content">
-		
-	</div>
-	
+		<div class="overlay">
+			<div class="content-center">
+				<a href="index.html">
+					<button class="overlay-close transition">&#735;</button>
+				</a>
+				<h2>GIRLS  & BOYS</h2>
+				<p>
+				Runs unique monthly events that give a voice to every artist booked, rather than focusing on giving support or headline titles respectively.
+				</p>
+				<p>
+				The monthly events aim to present new artists on an equal footing in order to subvert the norm, providing something that would break down genre barriers and bring together exciting new artists on the same bill. 
+				</p>
+				<a class="underslide" href="mailto:girlsandboysbooking@gmail.com">girlsandboysbooking@gmail.com</a>
+			</div>
+		</div>
 	<footer>
 			<a class="underslide" href="https://www.facebook.com/girlsandboysbooking/" target="blank">
 				<svg class="socialsvg" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
