--- a/girlsandboys/signup.html
+++ b/girlsandboys/signup.html
@@ -33,14 +33,14 @@
 	<!-- Transition Script -->
 	<script type="text/javascript">
 		$(document).ready(function() {
-		    $(".content").css("display", "none");
+		    $(".overlay").css("display", "none");
 		 
-		    $(".content").fadeIn(2000);
+		    $(".overlay").fadeIn(2000);
 		 
 		    $("a.transition").click(function(event){
 		        event.preventDefault();
 		        linkLocation = this.href;
-		        $(".content").fadeOut(1000, redirectPage);      
+		        $(".overlay").fadeOut(1000, redirectPage);      
 		    });
 		         
 		    function redirectPage() {
@@ -52,10 +52,10 @@
 <body>
 	<header>
 		<nav>
-			<a class="mainnav underslide transition" href="signup.html">Sign Up</a>
-			<a class="mainnav underslide transition" href="events.html">Events</a>
+			<a class="mainnav underslide" href="signup.html">Sign Up</a>
+			<a class="mainnav underslide" href="events.html">Events</a>
 			<a class="mainnav underslide" href="http://girlsandboyslikemusic.tumblr.com/" target="blank">Blog</a>
-			<a class="mainnav underslide transition" href="about.html">About</a>
+			<a class="mainnav underslide" href="about.html">About</a>
 			<a class="mainnav underslide" href="https://soundcloud.com/girlsandboys-1/sets/september-2016" target="blank">Playlist</a>
 		</nav>
 		<div class=mobile-nav>
@@ -63,20 +63,31 @@
 		  	<button class="cross">&#735;</button>
 			<div class="menu">
 		  		<ul>
-		  			<a class="transition" href="index.html"><li>HOME</li></a>
-		  			<a class="transition" href="signup.html"><li>SIGN UP</li></a>
-				    <a class="transition" href="events.html"><li>EVENTS</li></a>
+		  			<a href="index.html"><li>HOME</li></a>
+		  			<a href="signup.html"><li>SIGN UP</li></a>
+				    <a href="events.html"><li>EVENTS</li></a>
 				    <a href="http://girlsandboyslikemusic.tumblr.com/" target="blank"><li>BLOG</li></a>
-				    <a class="transition" href="about.html"><li>ABOUT</li></a>
+				    <a href="about.html"><li>ABOUT</li></a>
 				    <a href="https://soundcloud.com/girlsandboys-1/sets/september-2016" target="blank"><li>PLAYLIST</li></a>
 		  		</ul>
 			</div> 
 		</div>
 	</header>
-	<div class="content">
-		
-	</div>
-	
+		<div class="overlay">
+			<div class="content">
+				<a href="index.html">
+					<button class="overlay-close transition">&#735;</button>
+				</a>
+				<form action="http://tumblr.us12.list-manage.com/subscribe/post?u=9bbe8238d6e730db1cac503c9&amp;id=30977663e0" method="post" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate="">
+				<input class="mailchimp-input" type="text" value="" name="FNAME" class="" placeholder="First Name" id="mce-FNAME">
+				<input class="mailchimp-input" type="text" value="" name="LNAME" placeholder="Last Name" class="" id="mce-LNAME">
+	    		<input class="mailchimp-input" type="email" value="" name="EMAIL" placeholder="E-Mail Address" required="">
+		    		<div class="underslide">
+	    			<input class="mailchimp-input" id="submit" type="submit" value="Sign Up" name="subscribe">
+	    		</div>	
+	 		</form>
+			</div>
+		</div>
 	<footer>
 			<a class="underslide" href="https://www.facebook.com/girlsandboysbooking/" target="blank">
 				<svg class="socialsvg" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
