--- a/girlsandboys/index.html
+++ b/girlsandboys/index.html
@@ -31,11 +31,11 @@
 	<!-- JQUERY -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 	<!-- Transition Script -->
-	<script type="text/javascript">
+<!-- 	<script type="text/javascript">
 		$(document).ready(function() {
 		    $(".content").css("display", "none");
 		 
-		    $(".content").fadeIn(2000);
+		    $(".content").fadeIn(200);
 		 
 		    $("a.transition").click(function(event){
 		        event.preventDefault();
@@ -47,7 +47,7 @@
 		        window.location = linkLocation;
 		    }
 		});
-		</script>
+		</script> -->
 </head>
 <body>
 	<header>
@@ -56,7 +56,7 @@
 			<a class="mainnav underslide transition" href="events.html">Events</a>
 			<a class="mainnav underslide" href="http://girlsandboyslikemusic.tumblr.com/" target="blank">Blog</a>
 			<a class="mainnav underslide transition" href="about.html">About</a>
-			<a class="mainnav underslide" href="https://soundcloud.com/girlsandboys-1/sets/september-2016" target="blank">Playlist</a>
+			<a class="mainnav underslide" href="https://soundcloud.com/girlsandboys-1/sets/october-2016" target="blank">Playlist</a>
 		</nav>
 		<div class=mobile-nav>
 			<button class="hamburger">&#9776;</button>
@@ -68,7 +68,7 @@
 				    <a class="transition" href="events.html"><li>EVENTS</li></a>
 				    <a href="http://girlsandboyslikemusic.tumblr.com/" target="blank"><li>BLOG</li></a>
 				    <a class="transition" href="about.html"><li>ABOUT</li></a>
-				    <a href="https://soundcloud.com/girlsandboys-1/sets/september-2016" target="blank"><li>PLAYLIST</li></a>
+				    <a href="https://soundcloud.com/girlsandboys-1/sets/october-2016" target="blank"><li>PLAYLIST</li></a>
 		  		</ul>
 			</div> 
 		</div>
