--- a/girlsandboys/about.html
+++ b/girlsandboys/about.html
@@ -31,7 +31,7 @@
 	<!-- JQUERY -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 	<!-- Transition Script -->
-	<script type="text/javascript">
+<!-- 	<script type="text/javascript">
 		$(document).ready(function() {
 		    $(".overlay").css("display", "none");
 		 
@@ -47,7 +47,7 @@
 		        window.location = linkLocation;
 		    }
 		});
-		</script>
+		</script> -->
 </head>
 <body>
 	<header>
@@ -56,7 +56,7 @@
 			<a class="mainnav underslide" href="events.html">Events</a>
 			<a class="mainnav underslide" href="http://girlsandboyslikemusic.tumblr.com/" target="blank">Blog</a>
 			<a class="mainnav underslide" href="about.html">About</a>
-			<a class="mainnav underslide" href="https://soundcloud.com/girlsandboys-1/sets/september-2016" target="blank">Playlist</a>
+			<a class="mainnav underslide" href="https://soundcloud.com/girlsandboys-1/sets/october-2016" target="blank">Playlist</a>
 		</nav>
 		<div class=mobile-nav>
 			<button class="hamburger">&#9776;</button>
@@ -68,7 +68,7 @@
 				    <a href="events.html"><li>EVENTS</li></a>
 				    <a href="http://girlsandboyslikemusic.tumblr.com/" target="blank"><li>BLOG</li></a>
 				    <a href="about.html"><li>ABOUT</li></a>
-				    <a href="https://soundcloud.com/girlsandboys-1/sets/september-2016" target="blank"><li>PLAYLIST</li></a>
+				    <a href="https://soundcloud.com/girlsandboys-1/sets/october-2016" target="blank"><li>PLAYLIST</li></a>
 		  		</ul>
 			</div> 
 		</div>
