--- a/girlsandboys/events.html
+++ b/girlsandboys/events.html
@@ -80,35 +80,28 @@
 			<div class="upcoming-events">
 				<h2>UPCOMING EVENTS</h2>
 				<!-- UPCOMING EVENT 1 -->
-				<a href="https://dice.fm/event/irah-10th-nov-the-waiting-room-london-tickets" target="blank">
-					<img src="images/events/upcoming/01.jpg" alt="irah-10th-nov-the-waiting-room-london">
+				<a href="https://dice.fm/event/parcels-15th-feb-moth-club-london-tickets" target="blank">
+					<img src="images/events/upcoming/2017-02-15.jpg" alt="Parcels-Moth-Club">
 				</a>
-				<!-- UPCOMING EVENT 2 -->
-				<a href="#">
-					<img src="images/events/upcoming/02.jpg">
-				</a>
-<!-- 				UPCOMING EVENT 3 -->
-				<a href="#">
-					<img src="images/events/upcoming/03.jpg">
-				</a>
+
 			</div>
 			<div class="previous-events">
 				<h2>PREVIOUS EVENTS</h2>
-				<img src="images/events/previous/01.jpg">
-				<img src="images/events/previous/02.jpg">
-				<img src="images/events/previous/03.jpg">
-				<img src="images/events/previous/04.jpg">
-				<img src="images/events/previous/05.jpg">
-				<img src="images/events/previous/06.jpg">
-				<img src="images/events/previous/07.jpg">
-				<img src="images/events/previous/08.jpg">
-				<img src="images/events/previous/09.jpg">
-				<img src="images/events/previous/10.jpg">
-				<img src="images/events/previous/11.jpg">
-				<img src="images/events/previous/12.jpg">
-				<img src="images/events/previous/13.jpg">
-				<img src="images/events/previous/14.jpg">
-				<img src="images/events/previous/15.jpg">
+				<img src="images/events/previous/2016-11-10.jpg">
+				<img src="images/events/previous/2016-10-12.jpg">
+				<img src="images/events/previous/2016-10-07.jpg">
+				<img src="images/events/previous/2016-09-30.jpg">
+				<img src="images/events/previous/2016-09-22.jpg">
+				<img src="images/events/previous/2016-09-09.jpg">
+				<img src="images/events/previous/2016-05-16.jpg">
+				<img src="images/events/previous/2016-05-13.jpg">
+				<img src="images/events/previous/2016-04-01.jpg">
+				<img src="images/events/previous/2016-03-17.jpg">
+				<img src="images/events/previous/2016-03-04.jpg">
+				<img src="images/events/previous/2016-02-05.jpg">
+				<img src="images/events/previous/2015-10-22.jpg">
+				<img src="images/events/previous/2015-09-26.jpg">
+				<img src="images/events/previous/2015-07-16.jpg">
 			</div>
 		</div>
 	<footer>
