--- a/index.html
+++ b/index.html
@@ -59,11 +59,9 @@
     <div class="intro-header">
 		<div class="col-xs-12 text-center abcen1">
 			<h1 class="h1_home wow fadeIn" data-wow-delay="0.4s">Alex Crowley</h1>
-			<h3 class="h3_home wow fadeIn" data-wow-delay="0.6s">User Experience Designer</h3>
+			<h3 class="h3_home wow fadeIn" data-wow-delay="0.6s">London Based User Experience Designer</h3>
 			<ul class="list-inline intro-social-buttons">
 				<li><a href="#my-work" class="btn  btn-lg mybutton_standard wow fadeIn" data-wow-delay="0.8s"><span class="network-name">See My Work</span></a>
-				</li>
-				<li id="download" ><a href="#downloadlink" class="btn  btn-lg mybutton_standard wow swing wow fadeIn" data-wow-delay="1.2s"><span class="network-name">Contact Me</span></a>
 				</li>
 			</ul>
 		</div>    
@@ -109,17 +107,17 @@
 				
                 <div class="col-sm-6 wow fadeInLeftBig">
                      <div id="owl-demo-1" class="owl-carousel">
-						<a href="img/omniphoto1.png" class="image-link">
+						<a href="https://marvelapp.com/1518a73/screen/16401752" target="_blank">
 							<div class="item">
 								<img  class="img-responsive img-rounded" src="img/omniphoto1.png" alt="">
 							</div>
 						</a>
-						<a href="img/omniphoto2.png" class="image-link">
+						<a href="https://marvelapp.com/1518a73/screen/16401752" target="_blank">
 							<div class="item">
 								<img  class="img-responsive img-rounded" src="img/omniphoto2.png" alt="">
 							</div>
 						</a>
-						<a href="img/omniphoto3.png" class="image-link">
+						<a href="https://marvelapp.com/1518a73/screen/16401752" target="_blank">
 							<div class="item">
 								<img  class="img-responsive img-rounded" src="img/omniphoto3.png" alt="">
 							</div>
@@ -131,7 +129,7 @@
                     <h3 class="section-heading">OmniPhoto</h3>
 					<div class="sub-title lead3">Collaborative Group Photo Sharing</div>
                     <p class="lead">
-						OmniPhoto was a project inspired by the frustrations of people looking to combine all of their photographs from an event together with other people. I used the entire UX spectrum during the project, including User Researching, Prototyping, Design and User Testing. 
+						OmniPhoto was a concept project inspired by the frustrations of people looking to combine all of their photographs from an event together with other people. I used the entire UX spectrum during the project, including User Researching, Prototyping, Design and User Testing. 
 					</p>
 
 					 <p>
