--- a/faersspotifytest.html
+++ b/faersspotifytest.html
@@ -8,5 +8,5 @@
 <a href="http://www.songkick.com/artists/8404893" class="songkick-widget" data-theme="light" data-track-button="on" data-detect-style="true" data-background-color="#fff">TOUR DATES</a>
 
 </body>
-<script src="widget.songkick.com/widget.js"></script>
+<script src="//widget.songkick.com/widget.js"></script>
 </html>
