--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 
 				 <div class="col-sm-6 col-sm-offset-3" >
 				 	<div id="about-paragraph" class="row">
-				 		<p>I'm a fanatic for problem-solving, and I believe even the most complex problems can be solved with great design. I started my career in customer service and sales before transitioning into UX design, and I excel in empathising with people to really get to the heart of a problem. I'm a keen musician and photographer and am also well versed in HTML 5 and CSS 3. </p>
+				 		<p>I'm a fanatic for problem-solving, and I believe even the most complex problems can be solved with great design. I started my career in customer service and sales before transitioning into UX design, and I excel in empathising with people to really get to the heart of a problem. I'm a whizz with HTML 5 and CSS3 and am a keen musician and photographer.</p>
 				 </div>
 			 </div>	
 		</div>
